# gsdk

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pull_request_template.md  updateVersion.js  upgradeguide200219.md
.github/: copilot-instructions.md
.github/workflows/: cpp-tests.yml  csharp-tests.yml  godot-tests.yml  java-tests.yml  unity-tests.yml  unreal-tests.yml
UnityGsdk/: .gitignore  MpsGsdk.unitypackage  PlayFabMultiplayerSDK.unitypackage  README.md
UnityGsdk/Assets/: Scene.unity  TestServerInstance.cs
UnityGsdk/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset  QualitySettings.asset  UnityConnectSettings.asset
UnityGsdk/Tests/: GSDKConfigurationTests.cs  SerializationTests.cs  SessionConfigTests.cs  Tests.csproj
UnityGsdk/UserSettings/: EditorUserSettings.asset
UnrealPlugin/: License.txt  LinuxBuildsUE5.md  PlayFabGSDK.uplugin  PlayfabGSDK.uplugin  README.md  ThirdPersonClientConnect.md  ThirdPersonMPBuild.md  ThirdPersonMPCloudDeploy.md  ThirdPersonMPGSDKSetup.md  ThirdPersonMPLocalDeploy.md  ThirdPersonMPSetup.md
UnrealPlugin/SlateUGS/: SlateUGS.uproject
UnrealPlugin/TestingProject/: .gitignore  .vsconfig  SlateUGS.uproject
UnrealPlugin/Tests/: CMakeLists.txt  GSDKConfigTests.cpp  GSDKHeartbeatTests.cpp
cpp/: CMakeLists.txt  GSDK.sln  README.md  testbuild.bat  testbuild.sh
cpp/cppsdk/: GSDK_CPP_Linux.vcxproj  GSDK_CPP_Linux.vcxproj.filters  GSDK_CPP_Windows.vcxproj  GSDK_CPP_Windows.vcxproj.filters  ManualResetEvent.h  com.playfab.cppgsdk.v140.targets  gsdk.cpp  gsdk.h  gsdkCommonPch.h  gsdkConfig.cpp  gsdkConfig.h  gsdkInfo.h  gsdkInternal.h  gsdkLinuxPch.h  gsdkLog.cpp  gsdkUtils.cpp  gsdkUtils.h  gsdkWindowsPch.cpp  gsdkWindowsPch.h  version.txt
cpp/cppsdk/include/playfab/: PlayFabAdminApi.h  PlayFabAdminDataModels.h  PlayFabBaseModel.h  PlayFabClientApi.h  PlayFabClientDataModels.h  PlayFabEntityApi.h  PlayFabEntityDataModels.h  PlayFabHttp.h  PlayFabMatchmakerApi.h  PlayFabMatchmakerDataModels.h  PlayFabServerApi.h  PlayFabServerDataModels.h  PlayFabSettings.h
cpp/cppsdk/json/: json.h
cpp/cppsdk/source/playfab/: PlayFabClientApi.cpp  PlayFabEntityApi.cpp  PlayFabError.cpp  PlayFabMatchmakerApi.cpp  PlayFabServerApi.cpp  PlayFabSettings.cpp
cpp/dependencies/libcurl-vc15-x64-debug-dll-ssl-dll-ipv6-sspi/lib/: libcurl_debug.exp
cpp/dependencies/libcurl-vc15-x64-release-dll-ssl-dll-ipv6-sspi/lib/: libcurl.exp  libcurl.lib
cpp/testapps/cppLinuxRunnerGame/: Dockerfile  cppLinuxTestRunnerGame.vcxproj  main.cpp
cpp/testapps/cppLinuxTestApp/: cppLinuxTestApp.vcxproj  main.cpp
cpp/testapps/cppServerLoadSimulator/: 30fps.bat  60fps.bat  ServerLoadSimulator.cpp  ServerLoadSimulator.vcxproj  ServerLoadSimulator.vcxproj.filters
cpp/testapps/cppWindowsRunnerGame/: cppWindowsRunnerGame.vcxproj  main.cpp
cpp/testapps/cppWindowsTestApp/: cppWindowsTestApp.cpp  cppWindowsTestApp.vcxproj  cppWindowsTestApp.vcxproj.filters  cppWindowsTestAppPch.cpp  cppWindowsTestAppPch.h
cpp/unittests/: GSDK_CPP_UnitTests.vcxproj  TestConfig.cpp  TestConfig.h  gsdkTests.cpp
cpp_csharp/: GSDK.sln
csharp/: GSDK_CSharp_Standard.sln  NuGet.config  README.md
java/: README.md  build.gradle  gradlew.bat  settings.gradle  version.txt
pipelines/: csharp.yml
(+265 files in other folders)
